2006-09-18  Christian Schaffner  <chris01@users.sourceforge.net>

	* Checksum/SHA1.pm: Fix bug in matching of SHA1 line if Digest::<foo> 
	  isn't available (e.g. on 10.3). Fix proposed by AIDA Shinra on 
	  the fink-devel mailing list on 2006-06-24.


2006-09-16  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: remove "Using the new 10.4 tree" message (not so new 
	  any more!)

2006-09-15  Christian Schaffner  <chris01@users.sourceforge.net>

	* PkgVersion.pm: Don't rebuild .deb that just were downloaded if
	  UseBinaryDist is active. Fixes bug #1518461

2006-09-13  Matthew Sachs  <msachs@apple.com>

	* Validation.pm: Fix validation for InfoTest-less packages.

2006-09-12  Matthew Sachs  <msachs@apple.com>

	* PkgVersion.pm: Support TestSource(N)-Checksum.
	* Validation.pm: Likewise.

2006-09-12  Matthew Sachs  <msachs@apple.com>

	* Engine.pm: Show TestScript in dumpinfo.
	* PkgVersion.pm: Fix for sources inside InfoTest.
	* Validation.pm: Look inside InfoTest.

2006-09-12  Matthew Sachs  <msachs@apple.com>

	* Engine.pm: Allow maintainer mode with dumpinfo.
	* PkgVersion.pm: Implement InfoTest.
	* Validation.pm: Preliminary support for InfoTest.

2006-08-17  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Check the perl version of the perl package, not
	the perl running the program.

2006-08-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: revise error message to allow post-2.2.1 XCode

2006-08-17  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use perl's own version check feature to check
	perl versions.

2006-08-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: No MAKEFLAGS leakage

2006-08-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: correction of error message if PatchFile is present
	but BuildDepends on fink is not

2006-08-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: POSIX /bin/sh does not support "echo -n"
