@@ -1,3 +1,7 @@
+2006-09-24  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm: backport "fink cleanup" --all and default action.
+
 2006-09-18  Christian Schaffner  <chris01@users.sourceforge.net>
 
 	* Checksum/SHA1.pm: Fix bug in matching of SHA1 line if Digest::<foo> 
